objects/LLC_BI__Selected_Product__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Conversion_Object__c</fullName>
        <description>This associates the selected product back to an object to convert.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversion Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Product_For_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to differentiate between products added to an object for pricing or if it should display at the object level or strictly on the proforma for pricing</description>
        <label>Is_Product_For_Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line__c</fullName>
        <description>This associates a product line for the product which was selected for a conversion on the specified object</description>
        <formula>LLC_BI__Product__r.LLC_BI__Product_Type__r.LLC_BI__Product_Line__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type__c</fullName>
        <description>This associates an object to a product type if a product of this type was selected for a conversion.</description>
        <formula>LLC_BI__Product__r.LLC_BI__Product_Type__r.Name</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <description>This associates an object to a product if that product was selected for a conversion</description>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Selected_Product</relationshipLabel>
        <relationshipName>Selected_Product</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Selected Product</label>
    <nameField>
        <displayFormat>SP-{00000000}</displayFormat>
        <label>Product Selector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selected Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>